<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.GlifLayout android:icon="@drawable/ic_account_circle" android:id="@id/setup_wizard_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:suwHeaderText="@string/factory_reset_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SuwContentFrame">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/factory_reset_instructions" style="@style/SuwDescription.Glif" />
        <Button android:layout_gravity="end" android:id="@id/factory_reset_reset_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/factory_reset_button" style="@android:style/Widget.Material.Button.Colored" />
    </LinearLayout>
</com.android.setupwizardlib.GlifLayout>