<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.GlifLayout android:icon="@drawable/ic_phone_android" android:id="@id/setup_wizard_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:suwHeaderText="@string/qr_provision_user_consent_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/SuwContentFrame">
        <TextView android:id="@id/qr_provision_user_consent_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/qr_provision_user_consent_content_without_qr_library" style="@style/SuwDescription.Glif" />
        <Button android:layout_gravity="end" android:id="@id/qr_provision_user_consent_next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_next_button_label" style="@android:style/Widget.Material.Button.Colored" />
    </LinearLayout>
</com.android.setupwizardlib.GlifLayout>